// 定义项目 API 的 proto 文件 可以同时描述 gRPC 和 HTTP API
// protobuf 文件参考:
//  - https://developers.google.com/protocol-buffers/
syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/api/annotations.proto";

// package 命名使用 {appid}.{version} 的方式, version 形如 v1, v2 ..
package account.interface.v1;

option go_package = "api";
option (gogoproto.goproto_getters_all) = false;

message BasicInfo{
  string nickname = 1 [(gogoproto.moretags) = 'json:"nickname"'];
  string sign = 2 [(gogoproto.moretags) = 'json:"sign"'];
  string profilePicUrl = 3 [(gogoproto.moretags) = 'json:"profile_pic_url"'];
  string email = 4 [(gogoproto.moretags) = 'validate:"required"'];
  int64 uid = 5 [(gogoproto.moretags) = 'json:"uid"'];
}
message BasicInfoRequest{
  int64 uid = 1[(gogoproto.moretags) = 'form:"uid"'];
}

service Account {
  rpc GetBasicInfo (BasicInfoRequest) returns (BasicInfo){
    option (google.api.http) = {
      get: "/account/basicInfo"
    };
  };
}